legacy/old_artifacts/Model Results/Grok/13e47133/R2_feedback.txt
================================================================================
DIAGNOSIS
================================================================================

Phase: syntax_error

Your code has a Python syntax error and cannot be loaded:

  SyntaxError: invalid syntax (solution.py, line 77)

Fix the syntax error before anything else.

VALIDATOR ERROR (exit 1):

STDOUT:


STDERR:
Traceback (most recent call last):
  File "/home/runner/work/ARC-AGI2/ARC-AGI2/run_feedback.py", line 305, in <module>
    main()
  File "/home/runner/work/ARC-AGI2/ARC-AGI2/run_feedback.py", line 194, in main
    solve = importlib.import_module(solution_module).solve
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/hostedtoolcache/Python/3.11.15/x64/lib/python3.11/importlib/__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1204, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1176, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1147, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 690, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 936, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1074, in get_code
  File "<frozen importlib._bootstrap_external>", line 1004, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/home/runner/work/ARC-AGI2/ARC-AGI2/solution.py", line 77
    TEST_OUTPUT =
                 ^
SyntaxError: invalid syntax
